tests/snapshots/snapshots__list_with_project_filter_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#1d8f1d bg=#041204 mod=bold} FILTERS{/}{fg=#33ff33 bg=#041204}                  {/}{bg=#041204} {/}{fg=#66ff66 bg=#041204}▶{/}{fg=#aaffaa bg=#041204}▮{/}{fg=#66ff66 bg=#041204}◀{/}{bg=#041204} {/}{fg=#33ff33 bg=#041204 mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#1d8f1d bg=#041204}  •  4 task{/}{fg=#1d8f1d bg=#041204 mod=bold} DETAIL{/}{fg=#33ff33 bg=#041204}                           {/}
{fg=#33ff33 bg=#041204}                          {/}{bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#66ff66 bg=#041204 mod=bold} PROJECTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(1){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#aaffaa bg=#020a02 mod=bold}PRIORITY A{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} priority  {/}{fg=#aaffaa bg=#041204 mod=bold}(A){/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#0c4f0c} {/}{fg=#66ff66 bg=#0c4f0c}▸ +work           {/}{fg=#1d8f1d bg=#0c4f0c}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#020a02 bg=#33ff33}  1 {/}{fg=#020a02 bg=#33ff33 mod=bold}▸ (A) {/}{fg=#020a02 bg=#33ff33}Finish Q2 board deck +work @la{/}{fg=#1d8f1d bg=#041204} created   {/}{fg=#33ff33 bg=#041204}2026-05-01             {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +health         {/}{fg=#1d8f1d bg=#041204}  3{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(2){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}PRIORITY B{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} due       {/}{fg=#33ff33 bg=#041204}2026-05-06  {/}{fg=#ccffcc bg=#041204}today{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +finance        {/}{fg=#1d8f1d bg=#041204}  2{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  2 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}(B) {/}{fg=#33ff33 bg=#020a02}Review pull requests for auth {/}{fg=#1d8f1d bg=#041204} projects  {/}{fg=#66ff66 bg=#041204}+work{/}{fg=#33ff33 bg=#041204}                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +home           {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  3 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}(B) {/}{fg=#33ff33 bg=#020a02}Draft hiring rubric for senior{/}{fg=#1d8f1d bg=#041204} contexts  {/}{fg=#2adf2a bg=#041204}@laptop{/}{fg=#33ff33 bg=#041204}                {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +learning       {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(1){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#1d8f1d bg=#020a02 mod=bold}NO PRIORITY{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}─────────────────────{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +personal       {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#020a02}  4 {/}{fg=#66ff66 bg=#020a02}  {/}{fg=#33ff33 bg=#020a02}    Migrate analytics to new pipel{/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +travel         {/}{fg=#1d8f1d bg=#041204}  1{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#2adf2a bg=#041204 mod=bold} CONTEXTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@errands        {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@home           {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@laptop         {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@phone          {/}{fg=#1d8f1d bg=#041204}  3{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#020a02 bg=#33ff33 mod=bold} NORMAL {/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}j/k · n new · r reschedule · x done · / searc{/}{fg=#1d8f1d bg=#041204}4 open · 2026-05-06 · tuxedo 2026.7.1-prumo2 {/}
