tests/snapshots/snapshots__note_panel_overlay_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#1d8f1d bg=#041204 mod=bold} FILTERS{/}{fg=#33ff33 bg=#041204}                  {/}{bg=#041204} {/}{fg=#66ff66 bg=#041204}▶{/}{fg=#aaffaa bg=#041204}▮{/}{fg=#66ff66 bg=#041204}◀{/}{bg=#041204} {/}{fg=#33ff33 bg=#041204 mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#1d8f1d bg=#041204}  •  15 tas{/}{fg=#1d8f1d bg=#041204 mod=bold} DETAIL{/}{fg=#33ff33 bg=#041204}                           {/}
{fg=#33ff33 bg=#041204}                          {/}{bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#66ff66 bg=#041204 mod=bold} PROJECTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(2){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#aaffaa bg=#020a02 mod=bold}PRIORITY A{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} priority  {/}{fg=#aaffaa bg=#041204 mod=bold}(A){/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +work           {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#020a02 bg=#33ff33}  1 {/}{fg=#020a02 bg=#33ff33 mod=bold}▸ (A) {/}{fg=#020a02 bg=#33ff33}Finish Q2 board deck +work @la{/}{fg=#1d8f1d bg=#041204} created   {/}{fg=#33ff33 bg=#041204}2026-05-01             {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +health         {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}┌ {/}{fg=#66ff66 bg=#041204 mod=bold}* Write PR summary{/}{fg=#1d8f1d bg=#041204} · note {/}{fg=#0f3f0f bg=#041204}───────────────────────────────┐{/}{fg=#33ff33 bg=#041204}6-05-06  {/}{fg=#ccffcc bg=#041204}today{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +finance        {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#66ff66 bg=#041204 mod=bold}# Write PR summary{/}{fg=#33ff33 bg=#041204}                                        {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#66ff66 bg=#041204}rk{/}{fg=#33ff33 bg=#041204}                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +home           {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#2adf2a bg=#041204}ptop{/}{fg=#33ff33 bg=#041204}                {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +learning       {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}Some context about the task.                              {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +personal       {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +travel         {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#66ff66 bg=#041204}-{/}{fg=#33ff33 bg=#041204} [ ] draft outline                                       {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#145f14 bg=#041204 mod=crossed_out}- [x] collect links{/}{fg=#33ff33 bg=#041204}                                       {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#2adf2a bg=#041204 mod=bold} CONTEXTS{/}{fg=#33ff33 bg=#041204}           {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#1d8f1d bg=#041204 mod=italic}> reviewer prefers short PRs{/}{fg=#33ff33 bg=#041204}                              {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@errands        {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}One very long paragraph line that certainly exceeds the pa{/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@home           {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}nel width and must hard-wrap onto multiple{/}{fg=#020a02 bg=#33ff33 mod=bold} {/}{fg=#33ff33 bg=#041204}display rows wi{/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@laptop         {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}thout losing the cursor.                                  {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@phone          {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                                                          {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#1d8f1d bg=#041204} i edit · Space toggle · n subtask · o editor · Esc/q clos{/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}└──────────────────────────────────────────────────────────┘{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#020a02 bg=#33ff33 mod=bold} NOTE {/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}j/k · n new · r reschedule · x done · / search{/}{fg=#1d8f1d bg=#041204}15 open · 2026-05-06 · tuxedo 2026.7.1-prumo2 {/}
