tests/snapshots/snapshots__note_panel_overlay_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 ▸ (A) Finish Q2 board deck +work @la created   2026-05-01             
   +health          ┌ * Write PR summary · note ───────────────────────────────┐6-05-06  today      
   +finance         │# Write PR summary                                        │rk                  
   +home            │                                                          │ptop                
   +learning        │Some context about the task.                              │                    
   +personal        │                                                          │                    
   +travel          │- [ ] draft outline                                       │                    
                    │- [x] collect links                                       │1 Finish Q2 board   
 CONTEXTS           │> reviewer prefers short PRs                              │aptop               
   @errands         │One very long paragraph line that certainly exceeds the pa│6                   
   @home            │nel width and must hard-wrap onto multiple display rows wi│                    
   @laptop          │thout losing the cursor.                                  │                    
   @phone           │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │ i edit · o editor · Ctrl-S save · Esc/q close (saves)    │                    
                    └──────────────────────────────────────────────────────────┘                    
                                                                                                    
                                                                                                    
                                                                                                    
 NOTE   j/k · n new · r reschedule · x done · / search · ? he15 open · 2026-05-06 · tuxedo 2026.6.3
